upSlide not complite

--- a/public/src/html/include/contents.html
+++ b/public/src/html/include/contents.html
@@ -1,11 +1,13 @@
 <div class="contents">
-    <div class="mainslider">
-        <div class="single-item">
-            <img src="/public/src/resources/images/neungyule/01_PC_NE능률메인_1280x407_01수학.jpg" alt="능률메인 수학">
-            <img src="/public/src/resources/images/neungyule/01_PC_NE능률메인_1280x407_02세토-시리즈.jpg" alt="능률메인 세토시리즈">
-            <img src="/public/src/resources/images/neungyule/PC_능률메인_B&G_1280x407.png" alt="능률메인">
-            <img src="/public/src/resources/images/neungyule/bnr_PC_1280x407.png" alt="bnr">
-          </div>
+    <div class="sliderWrap">
+        <div class="mainslider">
+            <div class="single-item">
+                <img src="/public/src/resources/images/neungyule/01_PC_NE능률메인_1280x407_01수학.jpg" alt="능률메인 수학">
+                <img src="/public/src/resources/images/neungyule/01_PC_NE능률메인_1280x407_02세토-시리즈.jpg" alt="능률메인 세토시리즈">
+                <img src="/public/src/resources/images/neungyule/PC_능률메인_B&G_1280x407.png" alt="능률메인">
+                <img src="/public/src/resources/images/neungyule/bnr_PC_1280x407.png" alt="bnr">
+              </div>
+        </div>
     </div>
     <div class="category clearfix">
         <div class="categoryWrap firstCate">
