--- a/public/src/html/include/footer.html
+++ b/public/src/html/include/footer.html
@@ -1,3 +1,136 @@
-<div class="footer">
-
+<footer>
+    <div class="footerWrap">
+        <div class="footerMenu clearfix">
+            <ul>
+                <li><a href="#">개인정보처리방침</a></li>
+                <li><a href="#">이용약관</a></li>
+                <li><a href="#">이메일무단수집거부</a></li>
+                <li><a href="#">원고제안</a></li>
+            </ul>
+        </div>
+        <div class="info">
+            <div class="address">
+                <p>(주)NE능률 (03925) 서울특별시 마포구 월드컵북로 396(상암동) 누리꿈스퀘어 비즈니스타워 10층</p>
+                <p>대표이사 : 주민홍  대표번호 : 02)2014-7114,<a href="#"> [ ARS 안내 ] </a>  팩스 : 02)3142-0356    사업자등록번호 : 105-81-65267</p>
+                <p>개인정보 보호 책임자 (CPO) : 이규한 (necop@neungyule.com)</p>
+                <div class="imgWrap">
+                    <div class="award">
+                        <img src="/public/src/resources/images/neungyule/award_06.jpg" alt="award">
+                    </div>
+                    <div class="footerLogo">
+                        <img src="/public/src/resources/images/neungyule/ne_logo2.png" alt="logo2">
+                    </div>
+                </div>
+            </div>
+            <div class="copy">
+                <p>Copyright ⓒ NE Neungyule, Inc. All Rights Reserved</p>
+            </div>
+        </div>
+        <div class="familySite">
+            <img src="/public/src/resources/images/neungyule/bg_family.png" alt="Family list">
+            <div class="dropdown">
+                <button onclick="myFunction()" class="dropbtn"></button>
+                <div id="myDropdown" class="dropdown-content">
+                    <a href="#">아이챌린지</a>
+                    <a href="#">NE Kids</a>
+                    <a href="#">NE Books</a>
+                    <a href="#">NE Build & Grow</a>
+                    <a href="#">NE Times</a>
+                    <a href="#">NE Tutor</a>
+                    <a href="#">NE 클래스</a>
+                    <a href="#">NE 매쓰펀</a>
+                    <a href="#">NE능률 주니어랩</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    
+</footer>
+<div id="bottomBar">
+    <div class="divide">
+        <div class="bottomBarWrap clearfix">
+            <div class="noticeWrap">
+                <span class="ticker"><img src="/public/src/resources/images/neungyule/bg_ticker1.png" alt="ticker1"></span>
+                <span class="title"><h4>NOTICE</h4></span>
+                <span class="notice"><a href="#"><p>[필독] 개인정보 처리방침 개정 안내 (2/10 시행)</p></a></span>
+                <span class="date"><p>2021-02-04</p></span>
+            </div>
+            <div class="infomation">
+                <a href="#" class="customerCenter">
+                    <span class="icon">
+                        <img src="/public/src/resources/images/neungyule/neinfo.png" alt="NEinfo">
+                    </span>
+                    고객센터
+                    
+                </a>
+                <div class="neInfo"><p>NE INFO.</p></div>
+            </div>
+        </div>
+    </div>
+    <div class="hideBar">
+        <div class="hideBarWrap">
+            <div class="employ">
+                <h3>채용</h3>
+                <ul>
+                    <li><a href="#">- 공교육 콘텐츠 및 서비스 기획/개발</a></li>
+                    <li><a href="#">- 영어교육 콘텐츠 개발 신입직 채용</a></li>
+                    <li><a href="#">- 전 직무</a></li>
+                </ul>
+                <p><a href="#">more</a></p>
+            </div>
+        </div>
+        <div class="stock">
+            <div class="stockWrap">
+                <h3>IR</h3>
+                <div class="chart">
+                    <div class="present">
+                        <h4 style="display: none;">현재</h4>
+                        <img class="downImg" src="/public/src/resources/images/neungyule/mark_down2.gif" alt="downImg">
+                        <span class="Ptext">12,650</span>
+                    </div>
+                    <div class="yesterday">
+                        <h4>전일대비</h4>
+                        <div class="yWrap clearfix">
+                            <img class="downImg" src="/public/src/resources/images/neungyule/mark_down1.gif" alt="downImg">
+                            <span class="Ptext">600</span>
+                        </div>
+                    </div>
+                    <div class="updownP">
+                        <h4>등락률</h4>
+                        <span class="Ptext">-3.80%</span>
+                    </div>
+                </div>
+            </div>
+            <table>
+                <tbody>
+                    <tr>
+                        <th>시가</th>
+                        <td>12,750</td>
+                    </tr>
+                    <tr>
+                        <th>고가</th>
+                        <td>12,850</td>
+                    </tr>
+                    <tr>
+                        <th>저가</th>
+                        <td>12,050</td>
+                    </tr>
+                    <tr>
+                        <th>거래량</th>
+                        <td>328,285</td>
+                    </tr>
+                </tbody>
+            </table>
+            <!-- <dl class="stockDetail">
+                <dt>시가</dt>
+                <dd>12,750</dd>
+                <dt>고가</dt>
+                <dd>12,850</dd>
+                <dt>저가</dt>
+                <dd>12,050</dd>
+                <dt>거래량</dt>
+                <dd>328,285</dd>
+            </dl> -->
+        </div>
+    </div>
 </div>
