--- a/public/src/resources/sass/base/reset.scss
+++ b/public/src/resources/sass/base/reset.scss
@@ -4,6 +4,7 @@ body {
   padding: 0;
   width: 100%;
   height: 100%;
+  font-family: "Nanum Gothic", ng, Gulim, "굴림", Arial;
 }
 
 h1,
@@ -14,7 +15,10 @@ ul,
 li,
 p,
 a,
-blockquote {
+blockquote,
+dl,
+dt,
+dd {
   margin: 0;
   padding: 0;
   font-size: 100%;
