--- a/public/src/resources/sass/layout/contents.scss
+++ b/public/src/resources/sass/layout/contents.scss
@@ -1,15 +1,23 @@
 .contents {
-  .mainslider {
-    width: 1280px;
+  .sliderWrap {
     height: 407px;
     padding-top: 20px;
     padding-bottom: 40px;
-    margin: auto;
     position: relative;
+    .mainslider {
+      width: 1280px;
+      height: 407px;
+      margin: 0 auto;
+      position: relative;
+    }
+    .slick-dots {
+      bottom: 45px;
+    }
   }
   .category {
     width: 1000px;
-    margin: 20px auto 115px;
+    margin: 0px auto 115px;
+    overflow: hidden;
     .categoryWrap {
       width: 190px;
       float: left;
@@ -20,6 +28,16 @@
       ul {
         li {
           overflow: hidden;
+          width: 185px;
+          &:hover {
+            img {
+              display: block;
+              background-repeat: no-repeat;
+              // width: 185px;
+              height: 230px;
+              padding-left: 185px;
+            }
+          }
         }
       }
     }
@@ -30,15 +48,12 @@
           &:first-child {
             border-bottom: 1px solid #f5a100;
             &:hover img {
-              display: block;
-              -moz-box-sizing: border-box;
-              box-sizing: border-box;
-              background: url(/public/src/resources/images/neungyule/img_link_ic_on.gif)
-                no-repeat;
-              width: 180px; /* Width of new image */
-              height: 230px; /* Height of new image */
-              padding-left: 190px; /* Equal to width of new image */
-              //   z-index: 9999;
+              background: url(/public/src/resources/images/neungyule/img_link_ic_on.gif);
+            }
+          }
+          &:last-child {
+            &:hover img {
+              background: url(/public/src/resources/images/neungyule/img_link_kids_on.gif);
             }
           }
         }
@@ -47,19 +62,20 @@
     .midleCate {
       position: relative;
       width: 580px;
-      margin: 0 20px;
+      margin: 0 16px;
       &::before {
         content: "";
         position: absolute;
         top: 282px;
-        left: 0;
+        left: 10px;
         right: 0;
         border-top: 1px solid #75bb29;
-        width: 580px;
+        width: 560px;
         height: 1px;
       }
       ul {
         border: 1px solid #75bb29;
+        width: 560px;
         li {
           float: left;
           &:nth-child(1),
@@ -68,11 +84,36 @@
           &:nth-child(5) {
             border-right: 1px solid #75bb29;
           }
-          //   &:nth-child(1),
-          //   &:nth-child(2),
-          //   &:nth-child(3) {
-          //     border-bottom: 1px solid #75bb29;
-          //   }
+          &:nth-child(1) {
+            &:hover img {
+              background: url(/public/src/resources/images/neungyule/img_link_textbook_on.gif);
+            }
+          }
+          &:nth-child(2) {
+            &:hover img {
+              background: url(/public/src/resources/images/neungyule/img_link_study_on.gif);
+            }
+          }
+          &:nth-child(3) {
+            &:hover img {
+              background: url(/public/src/resources/images/neungyule/img_link_mathfun_on.gif);
+            }
+          }
+          &:nth-child(4) {
+            &:hover img {
+              background: url(/public/src/resources/images/neungyule/img_link_junior_on.gif);
+            }
+          }
+          &:nth-child(5) {
+            &:hover img {
+              background: url(/public/src/resources/images/neungyule/img_link_times_on.gif);
+            }
+          }
+          &:nth-child(6) {
+            &:hover img {
+              background: url(/public/src/resources/images/neungyule/img_link_class_on.gif);
+            }
+          }
         }
       }
     }
@@ -82,6 +123,14 @@
         li {
           &:first-child {
             border-bottom: 1px solid #a55cb0;
+            &:hover img {
+              background: url(/public/src/resources/images/neungyule/img_link_tomato_on.gif);
+            }
+          }
+          &:last-child {
+            &:hover img {
+              background: url(/public/src/resources/images/neungyule/img_link_edu_on.gif);
+            }
           }
         }
       }
