--- a/public/src/html/include/footer.html
+++ b/public/src/html/include/footer.html
@@ -63,11 +63,14 @@
                     고객센터
                     
                 </a>
-                <div class="neInfo"><p>NE INFO.</p></div>
+                <div class="neInfo">
+                    <p>NE INFO.</p>
+                    <button onclick="dropUp()" class="slideBtn"></button>
+                </div>
             </div>
         </div>
     </div>
-    <div class="hideBar">
+    <div id="hideMenu" class="hideBar">
         <div class="hideBarWrap">
             <div class="employ">
                 <h3>채용</h3>
@@ -121,16 +124,6 @@
                     </tr>
                 </tbody>
             </table>
-            <!-- <dl class="stockDetail">
-                <dt>시가</dt>
-                <dd>12,750</dd>
-                <dt>고가</dt>
-                <dd>12,850</dd>
-                <dt>저가</dt>
-                <dd>12,050</dd>
-                <dt>거래량</dt>
-                <dd>328,285</dd>
-            </dl> -->
         </div>
     </div>
 </div>
