--- a/public/src/resources/sass/layout/footer.scss
+++ b/public/src/resources/sass/layout/footer.scss
@@ -154,7 +154,7 @@ footer {
         .ticker {
           padding: 0;
           position: absolute;
-          top: 10px;
+          top: 13px;
           display: inline-block;
         }
         .title {
@@ -213,6 +213,14 @@ footer {
             color: #fff;
             text-align: center;
             padding-right: 40px;
+          }
+          .slideBtn {
+            position: absolute;
+            width: 190px;
+            height: 60px;
+            top: 0;
+            cursor: pointer;
+            background: none;
           }
         }
       }
