--- a/public/src/html/include/header.html
+++ b/public/src/html/include/header.html
@@ -1,4 +1,5 @@
 <header>
+    <img class="topline" src="/public/src/resources/images/neungyule/bg_topline1.png" alt="topline">
     <div class="gnb_wrap clearfix">
         <div class="logo">
             <h2 class="hidden">
