--- a/public/src/html/include/contents.html
+++ b/public/src/html/include/contents.html
@@ -6,7 +6,7 @@
                 <img src="/public/src/resources/images/neungyule/01_PC_NE능률메인_1280x407_02세토-시리즈.jpg" alt="능률메인 세토시리즈">
                 <img src="/public/src/resources/images/neungyule/PC_능률메인_B&G_1280x407.png" alt="능률메인">
                 <img src="/public/src/resources/images/neungyule/bnr_PC_1280x407.png" alt="bnr">
-              </div>
+            </div>
         </div>
     </div>
     <div class="category clearfix">
@@ -17,12 +17,16 @@
             <ul class="clearfix">
                 <li>
                     <a href="#">
-                        <img src="/public/src/resources/images/neungyule/img_link_ic.gif" alt="아이챌린지">
+                        <img onmouseover="this.src='/public/src/resources/images/neungyule/img_link_ic_on.gif'" 
+                        onmouseout="this.src='/public/src/resources/images/neungyule/img_link_ic.gif'"   
+                        src= "/public/src/resources/images/neungyule/img_link_ic.gif" alt="아이챌린지""> 
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="/public/src/resources/images/neungyule/img_link_kids.gif" alt="NE Kids">
+                        <img onmouseover="this.src='/public/src/resources/images/neungyule/img_link_kids_on.gif'" 
+                        onmouseout="this.src='/public/src/resources/images/neungyule/img_link_kids.gif'"   
+                        src= "/public/src/resources/images/neungyule/img_link_kids.gif" alt="NE Kids""> 
                     </a>
                 </li>
             </ul>
@@ -34,32 +38,44 @@
             <ul class="clearfix">
                 <li>
                     <a href="#">
-                        <img src="/public/src/resources/images/neungyule/img_link_textbook.gif" alt="교과서">
+                        <img onmouseover="this.src='/public/src/resources/images/neungyule/img_link_textbook_on.gif'" 
+                        onmouseout="this.src='/public/src/resources/images/neungyule/img_link_textbook.gif'"   
+                        src= "/public/src/resources/images/neungyule/img_link_textbook.gif" alt="교과서""> 
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="/public/src/resources/images/neungyule/img_link_study.gif" alt="학습서">
+                        <img onmouseover="this.src='/public/src/resources/images/neungyule/img_link_study_on.gif'" 
+                        onmouseout="this.src='/public/src/resources/images/neungyule/img_link_study.gif'"   
+                        src= "/public/src/resources/images/neungyule/img_link_study.gif" alt="학습서""> 
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="/public/src/resources/images/neungyule/img_link_mathfun.gif" alt="NE매쓰펀">
+                        <img onmouseover="this.src='/public/src/resources/images/neungyule/img_link_mathfun_on.gif'" 
+                        onmouseout="this.src='/public/src/resources/images/neungyule/img_link_mathfun.gif'"   
+                        src= "/public/src/resources/images/neungyule/img_link_mathfun.gif" alt="NE매쓰펀""> 
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="/public/src/resources/images/neungyule/img_link_junior.gif" alt="NE능률 주니어랩">
+                        <img onmouseover="this.src='/public/src/resources/images/neungyule/img_link_junior_on.gif'" 
+                        onmouseout="this.src='/public/src/resources/images/neungyule/img_link_junior.gif'"   
+                        src= "/public/src/resources/images/neungyule/img_link_junior.gif" alt="NE능률 주니어랩""> 
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="/public/src/resources/images/neungyule/img_link_times.gif" alt="NE Times">
+                        <img onmouseover="this.src='/public/src/resources/images/neungyule/img_link_times_on.gif'" 
+                        onmouseout="this.src='/public/src/resources/images/neungyule/img_link_times.gif'"   
+                        src= "/public/src/resources/images/neungyule/img_link_times.gif" alt="NE Times""> 
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="/public/src/resources/images/neungyule/img_link_class.gif" alt="NE클래스">
+                        <img onmouseover="this.src='/public/src/resources/images/neungyule/img_link_class_on.gif'" 
+                        onmouseout="this.src='/public/src/resources/images/neungyule/img_link_class.gif'"   
+                        src= "/public/src/resources/images/neungyule/img_link_class.gif" alt="NE클래스""> 
                     </a>
                 </li>
             </ul>
@@ -71,12 +87,16 @@
             <ul class="clearfix">
                 <li>
                     <a href="#">
-                        <img src="/public/src/resources/images/neungyule/img_link_tomato.gif" alt="토마토 클래스">
+                        <img onmouseover="this.src='/public/src/resources/images/neungyule/img_link_tomato_on.gif'" 
+                        onmouseout="this.src='/public/src/resources/images/neungyule/img_link_tomato.gif'"   
+                        src= "/public/src/resources/images/neungyule/img_link_tomato.gif" alt="토마토 클래스""> 
                     </a>
                 </li>
                 <li>
                     <a href="#">
-                        <img src="/public/src/resources/images/neungyule/img_link_edu.gif" alt="법인교육">
+                        <img onmouseover="this.src='/public/src/resources/images/neungyule/img_link_edu_on.gif'" 
+                        onmouseout="this.src='/public/src/resources/images/neungyule/img_link_edu.gif'"   
+                        src= "/public/src/resources/images/neungyule/img_link_edu.gif" alt="법인교육""> 
                     </a>
                 </li>
             </ul>
