--- a/public/src/html/include/footer.html
+++ b/public/src/html/include/footer.html
@@ -65,7 +65,7 @@
                 </a>
                 <div class="neInfo">
                     <p>NE INFO.</p>
-                    <button onclick="dropUp()" class="slideBtn"></button>
+                    <button  class="slideBtn"></button>
                 </div>
             </div>
         </div>
