--- a/public/src/resources/sass/layout/contents.scss
+++ b/public/src/resources/sass/layout/contents.scss
@@ -8,7 +8,9 @@
       width: 1280px;
       height: 407px;
       margin: 0 auto;
-      position: relative;
+      position: absolute;
+      left: 50%;
+      margin-left: -640px;
     }
     .slick-dots {
       bottom: 5px;
@@ -18,7 +20,6 @@
     width: 1000px;
     margin: 0px auto 115px;
     overflow: hidden;
-    padding-right: 14px;
     .categoryWrap {
       box-sizing: border-box;
       .title {
