--- a/public/src/resources/sass/layout/footer.scss
+++ b/public/src/resources/sass/layout/footer.scss
@@ -182,13 +182,14 @@ footer {
         }
       }
       .infomation {
-        width: 340px;
+        width: 346px;
         float: left;
         height: 60px;
         line-height: 60px;
         .customerCenter {
           line-height: 20px;
           padding-top: 10px;
+          padding-left: 3px;
           width: 150px;
           font-size: 15px;
           font-weight: bold;
